--- a/packages/ui/src/styles/styles.css
+++ b/packages/ui/src/styles/styles.css
@@ -19,9 +19,10 @@ body {
   overflow-y: auto;
   height: 100%;
 }
-/* .appFrame {
-  height: 100%;
-} */
+.appFrame {
+  /* height: 100%; */
+  margin-top: 60px !important;
+}
 ::-webkit-scrollbar {
   height: 6px;
   width: 6px;
