--- a/packages/ui/src/styles/styles.css
+++ b/packages/ui/src/styles/styles.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  font-family: Roboto !important;
+  font-family: "Roboto", Helvetica, Arial, sans-serif !important;
   font-size: 16px;
   color: #333;
   background: #ffffff;
