--- a/packages/ui/src/styles/styles.css
+++ b/packages/ui/src/styles/styles.css
@@ -532,6 +532,8 @@ header .container {
   -webkit-flex-wrap: wrap;
   padding: 0;
   margin: 0 auto;
+  align-items: center;
+  justify-content: center;
 }
 
 .products .product {
