--- a/packages/ui/src/styles/styles.css
+++ b/packages/ui/src/styles/styles.css
@@ -2689,3 +2689,29 @@ label {
   margin: 5px 0px;
   padding-right: 7px;
 }
+.accessError{
+  text-align: center;
+  padding: 15px;
+  font-size: 3vw;
+  color: darkred;
+}
+.adminHeader{
+  font-size: 200%;
+  font-weight: 500;
+  padding: 15px;
+  flex: 1 1 auto;
+}
+.adminData {
+  background-color: white;
+  box-shadow: 0px 0px 2px 0px rgba(6, 6, 6, 0.38);
+}
+.pageNav {
+  padding: 1px 15px 15px 15px;
+  margin-top: 5px;
+}
+.headerPane {
+  margin-bottom: 5px;
+}
+.formRow{
+  padding: 1%
+}
